--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-#background-image {
-  background-size: cover;
-  position: absolute;
-}
-
 a {
   text-decoration: none !important;
   color: black;
@@ -37,16 +32,25 @@ a:-webkit-any-link {
   top: 0;
   margin: 0 auto;
   position: fixed;
-  width: 500px;
   height: 100%;
+  width: 100%;
   background: #FBD2C8;
-  z-index: 999999;
+  z-index: 999;
   overflow: hidden;
 }
 
-.img-logo {
+.body-content {
+  display: block;
   height: 100%;
   width: 100%;
+  z-index: 999;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.img-logo {
+  height: auto;
+  max-width: 75%;
   display: block;
   margin: 40px auto;
 }
@@ -175,18 +179,18 @@ a:-webkit-any-link {
 
 #book-icon {
   height: 140px;
+  width: auto;
   margin-top: 40px;
 }
 
 .img-icon {
-  height: 120px;
-  width: auto;
   display: block;
   text-align: center;
-  margin: 0px auto;
+  margin: 40px auto;
+  margin-bottom: 10px;
 }
 
-#about-cont {
+/*#about-cont {
   left: 700px;
   top: 100px;
   margin: 50px auto;
@@ -257,9 +261,9 @@ a:-webkit-any-link {
   overflow: hidden;
   text-align: center;
   background-color: #FBD2C8;
-}
+}*/
 
-h1.content-header {
+/*h1.content-header {
   font-family: Didot bold;
   font-size: 20px;
 }
@@ -267,4 +271,30 @@ h1.content-header {
 p.paragraph-content {
   font-family: Didot;
   font-size: 14px;
+}*/
+
+@media only screen and (min-width:500px) {
+  .menu {
+    left: 0;
+    top: 0;
+    margin: 0 auto;
+    overflow: hidden;
+    width: 33.333%;
+    height: 100%;
+    background: #FBD2C8;
+    z-index: 9;
+  }
+}
+@media screen and (min-width: 500px) {
+  .img-logo {
+    height: auto;
+    width: 80%;
+    display: block;
+    margin: 40px auto;
+  }
+}
+@media screen and (min-width: 500px) {
+  img#background-image {
+    display: none;
+  }
 }
