--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a:-webkit-any-link {
   top: 0;
   margin: 0 auto;
   position: fixed;
-  height: 100%;
+  height: 15%;
   width: 100%;
   background: #FBD2C8;
   z-index: 999;
@@ -48,36 +48,37 @@ a:-webkit-any-link {
   margin: 0 auto;
 }
 
-.img-logo {
+#sharon-logo {
   height: auto;
   max-width: 75%;
   display: block;
-  margin: 40px auto;
+  margin: 20px auto;
 }
 
 
 .img-container-1 {
   position: relative;
   width: 50%;
-  display: block;
+  display: none;
   margin: 0 auto;
 }
 
 .img-container-2 {
   position: relative;
   width: 50%;
-  display: block;
+  display: none;
   margin: 0 auto;
 }
 
 .img-container-3 {
   position: relative;
   width: 50%;
-  display: block;
+  display: none;
   margin: 0 auto;
 }
 
 .overlay {
+  display: none;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -91,6 +92,7 @@ a:-webkit-any-link {
 }
 
 .overlay2 {
+  display: none;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -104,6 +106,7 @@ a:-webkit-any-link {
 }
 
 .overlay3 {
+  display: none;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -119,17 +122,21 @@ a:-webkit-any-link {
 
 .img-container-1:hover .overlay {
   opacity: 1;
+  display: none;
 }
 
 .img-container-2:hover .overlay2 {
   opacity: 1;
+  display: none;
 }
 
 .img-container-3:hover .overlay3 {
   opacity: 1;
+  display: none;
 }
 
 .text-1 {
+  display: none;
   color: black;
   text-decoration: none;
   font-family: Didot bold;
@@ -142,6 +149,7 @@ a:-webkit-any-link {
 }
 
 .text-2 {
+  display: none;
   color: black;
   text-decoration: none;
   font-family: Didot bold;
@@ -154,6 +162,7 @@ a:-webkit-any-link {
 }
 
 .text-3 {
+  display: none;
   color: black;
   font-family: Didot bold;
   font-size: 20px;
@@ -168,19 +177,21 @@ a:-webkit-any-link {
   height: 65px;
   width: auto;
   margin-top: 60px;
-  display: block;
+  display: none;
 }
 
 #second-icon {
   height: 100px;
   width: auto;
   margin-top: 40px;
+  display: none;
 }
 
 #book-icon {
   height: 140px;
   width: auto;
   margin-top: 40px;
+  display: none;
 }
 
 .img-icon {
@@ -285,7 +296,7 @@ p.paragraph-content {
     z-index: 9;
   }
 }
-@media screen and (min-width: 500px) {
+@media only screen and (min-width: 500px) {
   .img-logo {
     height: auto;
     width: 80%;
@@ -293,8 +304,135 @@ p.paragraph-content {
     margin: 40px auto;
   }
 }
-@media screen and (min-width: 500px) {
+@media only screen and (min-width: 500px) {
   img#background-image {
-    display: none;
+    height: 100%;
+    width: 100%;
+  }
+  .img-container-1 {
+    position: relative;
+    width: 50%;
+    display: block;
+    margin: 0 auto;
+  }
+  .img-container-2 {
+    position: relative;
+    width: 50%;
+    display: block;
+    margin: 0 auto;
+  }
+  .img-container-3 {
+    position: relative;
+    width: 50%;
+    display: block;
+    margin: 0 auto;
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #FBD2C8;
+  }
+  .overlay2 {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #FBD2C8;
+  }
+  .overlay3 {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #FBD2C8;
+  }
+  .img-container-1:hover .overlay {
+    opacity: 1;
+  }
+
+  .img-container-2:hover .overlay2 {
+    opacity: 1;
+  }
+
+  .img-container-3:hover .overlay3 {
+    opacity: 1;
+  }
+
+  .text-1 {
+    color: black;
+    text-decoration: none;
+    font-family: Didot bold;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+
+  .text-2 {
+    color: black;
+    text-decoration: none;
+    font-family: Didot bold;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+
+  .text-3 {
+    color: black;
+    font-family: Didot bold;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+
+  #first-icon {
+    height: 65px;
+    width: auto;
+    margin-top: 60px;
+    display: block;
+  }
+
+  #second-icon {
+    height: 100px;
+    width: auto;
+    margin-top: 40px;
+  }
+
+  #book-icon {
+    height: 140px;
+    width: auto;
+    margin-top: 40px;
+  }
+
+  .img-icon {
+    display: block;
+    text-align: center;
+    margin: 40px auto;
+    margin-bottom: 10px;
   }
 }
