--- a/style.css
+++ b/style.css
@@ -34,6 +34,9 @@ img.body-background {
   position: fixed;
   z-index: 9;
 }
+div {
+  z-index: 9 !important;
+}
 
 .menu {
   left: 0;
@@ -62,7 +65,7 @@ button.hamburger-button {
   float: right;
 }
 .hamburger-menu-list {
-  z-index: 999999;
+  z-index: 999999 !important;
   margin-top: 100px;
   font-weight:bold;
   font-size: 20px;
@@ -79,12 +82,14 @@ button.hamburger-button {
   list-style-image: none;
   color: black;
   padding: 10px;
+  z-index: 99999;
 }
 .hamburger-menu-list li {
   display: block;
   border-bottom:#FBD2C8 1px solid;
   color: black;;
   padding: 10px;
+  z-index: 99999;
 }
 .hamburger-menu-list li:hover{
   display: block;
@@ -276,12 +281,10 @@ button.hamburger-button {
   position: fixed;
   right: 0;
   left: 0;
-  height: 500px;
+  height: 900px;
   width: 100%;
-  z-index: 999;
-  font-family: Didot bold;
+  z-index: 9;
   text-align: justify;
-  overflow: hidden;
   background-color: #FBD2C8;
   padding-left: 5px;
   padding-right: 5px;
@@ -313,38 +316,34 @@ button.hamburger-button {
 
 #work-cont {
   display: none;
-  left: 1400px;
-  top: 100px;
-  margin: 50px auto;
-  position: absolute;
-  height: 450px;
-  width: 400px;
   font-family: Didot bold;
-  text-align: center;
-  color: black;
-  float: none;
-  z-index: 999;
-  overflow: hidden;
-  text-align: center;
+  margin-top: 150px;
+  position: fixed;
+  right: 0;
+  left: 0;
+  height: 1000px;
+  width: 100%;
+  z-index: 9;
+  text-align: justify;
   background-color: #FBD2C8;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 #contact-cont {
   display: none;
-  left: 2000px;
-  top: 100px;
-  position: absolute;
-  margin: 50px auto;
-  height: 450px;
-  width: 400px;
-  z-index: 999;
   font-family: Didot bold;
-  text-align: center;
-  color: black;
-  float: none;
-  overflow: hidden;
-  text-align: center;
+  margin-top: 150px;
+  position: fixed;
+  right: 0;
+  left: 0;
+  height: 200px;
+  width: 100%;
+  z-index: 9;
+  text-align: justify;
   background-color: #FBD2C8;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 h1.content-header {
@@ -355,11 +354,15 @@ h1.content-header {
 h2.second-header {
   font-family: Didot bold;
   font-size: 20px;
+  text-align: justify;
+  padding-right: 5px;
 }
 
 p.paragraph-content {
   font-family: Didot;
   font-size: 16px;
+  text-align: justify;
+  padding-right: 5px;
 }
 
 @media only screen and (min-width:500px) {
