--- a/style.css
+++ b/style.css
@@ -128,8 +128,6 @@ button.hamburger-button {
   margin-bottom: auto;
   float: left;
 }
-
-
 .img-container-1 {
   position: relative;
   width: 50%;
@@ -277,6 +275,7 @@ button.hamburger-button {
 
 #about-cont {
   display: none;
+  font-family: Didot bold;
   margin-top: 150px;
   position: fixed;
   right: 0;
@@ -287,7 +286,7 @@ button.hamburger-button {
   text-align: justify;
   background-color: #FBD2C8;
   padding-left: 5px;
-  padding-right: 5px;
+  padding-right: 10px;
 }
 
 /*#about-container {
@@ -327,7 +326,7 @@ button.hamburger-button {
   text-align: justify;
   background-color: #FBD2C8;
   padding-left: 5px;
-  padding-right: 5px;
+  padding-right: 10px;
 }
 
 #contact-cont {
@@ -343,7 +342,7 @@ button.hamburger-button {
   text-align: justify;
   background-color: #FBD2C8;
   padding-left: 5px;
-  padding-right: 5px;
+  padding-right: 10px;
 }
 
 h1.content-header {
@@ -374,10 +373,46 @@ p.paragraph-content {
     width: 33.333%;
     height: 100%;
     background: #FBD2C8;
-    z-index: 9;
+    z-index: 99999;
   }
   button {
     display: none;
+  }
+  .hamburger-button {
+    display: none;
+  }
+  .hamburger-menu-list {
+    display: none;
+  }
+  #sharon-logo {
+    height: auto;
+    max-width: 75%;
+    margin: 40px auto;
+    float: none;
+  }
+  #first-icon {
+    height: 65px;
+    width: auto;
+    margin-top: 60px;
+    display: block;
+  }
+  #second-icon {
+    height: 100px;
+    width: auto;
+    margin-top: 60px;
+    display: block;
+  }
+  #book-icon {
+    height: 140px;
+    width: auto;
+    margin-top: 60px;
+    display: block;
+  }
+  .img-icon {
+    display: block;
+    text-align: center;
+    margin: 40px auto;
+    margin-bottom: 10px;
   }
 }
 @media only screen and (min-width: 500px) {
@@ -413,6 +448,7 @@ p.paragraph-content {
   }
   .overlay {
     position: absolute;
+    display: block;
     top: 0;
     bottom: 0;
     left: 0;
@@ -425,6 +461,7 @@ p.paragraph-content {
   }
   .overlay2 {
     position: absolute;
+    display: block;
     top: 0;
     bottom: 0;
     left: 0;
@@ -437,6 +474,7 @@ p.paragraph-content {
   }
   .overlay3 {
     position: absolute;
+    display: block;
     top: 0;
     bottom: 0;
     left: 0;
@@ -447,7 +485,7 @@ p.paragraph-content {
     transition: .5s ease;
     background-color: #FBD2C8;
   }
-  .img-container-1:hover .overlay {
+  /*.img-container-1:hover .overlay {
     opacity: 1;
   }
 
@@ -457,9 +495,9 @@ p.paragraph-content {
 
   .img-container-3:hover .overlay3 {
     opacity: 1;
-  }
-
+  }*/
   .text-1 {
+    display: block;
     color: black;
     text-decoration: none;
     font-family: Didot bold;
@@ -470,8 +508,8 @@ p.paragraph-content {
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
   }
-
   .text-2 {
+    display: block;
     color: black;
     text-decoration: none;
     font-family: Didot bold;
@@ -482,8 +520,8 @@ p.paragraph-content {
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
   }
-
   .text-3 {
+    display: block;
     color: black;
     font-family: Didot bold;
     font-size: 20px;
@@ -492,31 +530,5 @@ p.paragraph-content {
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-  }
-
-  #first-icon {
-    height: 65px;
-    width: auto;
-    margin-top: 60px;
-    display: block;
-  }
-
-  #second-icon {
-    height: 100px;
-    width: auto;
-    margin-top: 40px;
-  }
-
-  #book-icon {
-    height: 140px;
-    width: auto;
-    margin-top: 40px;
-  }
-
-  .img-icon {
-    display: block;
-    text-align: center;
-    margin: 40px auto;
-    margin-bottom: 10px;
   }
 }
