--- a/style.css
+++ b/style.css
@@ -284,71 +284,56 @@ button.hamburger-button {
   font-family: Didot bold;
   margin-top: 150px;
   margin-bottom: 40px;
+  margin-right: auto;
+  margin-left: auto;
   right: 0;
   left: 0;
-  width: 100%;
+  width: 90%;
   z-index: 9;
   text-align: justify;
   background-color: #FBD2C8;
-  padding-left: 5px;
-  padding-right: 10px;
-  overflow: scroll;
+  padding-top: 2vw;
+  padding-left: 3vw;
+  padding-right: 3vw;
+  padding-bottom: 2vw;
 }
-
-/*#about-container {
-  margin: 20px 100px 100px 200px;
-  position: inherit;
-  height: 650px;
-  width: 400px;
-  z-index: 99;
-  overflow: hidden;
-  text-align: center;
-  background-color: none;
-}*/
-
-/*#work-container {
-  left: 1300px;
-  top: 0px;
-  margin: 20px auto;
-  position: absolute;
-  height: 650px;
-  width: 100%;
-  z-index: 999;
-  overflow: hidden;
-  text-align: center;
-  background-color: none;
-}*/
 
 #work-cont {
   display: none;
   font-family: Didot bold;
   margin-top: 150px;
-  position: fixed;
+  margin-bottom: 40px;
+  margin-right: auto;
+  margin-left: auto;
   right: 0;
   left: 0;
-  height: 1000px;
-  width: 100%;
+  width: 90%;
   z-index: 9;
   text-align: justify;
   background-color: #FBD2C8;
-  padding-left: 5px;
-  padding-right: 10px;
+  padding-top: 2vw;
+  padding-left: 3vw;
+  padding-right: 3vw;
+  padding-bottom: 2vw;
 }
 
 #contact-cont {
   display: none;
   font-family: Didot bold;
-  margin-top: 200px;
-  position: fixed;
+  margin-top: 150px;
+  margin-bottom: 40px;
+  margin-right: auto;
+  margin-left: auto;
   right: 0;
   left: 0;
-  height: 200px;
-  width: 100%;
+  width: 90%;
   z-index: 9;
   text-align: justify;
   background-color: #FBD2C8;
-  padding-left: 5px;
-  padding-right: 10px;
+  padding-top: 2vw;
+  padding-left: 3vw;
+  padding-right: 3vw;
+  padding-bottom: 2vw;
 }
 
 h1.mob-header {
@@ -460,6 +445,7 @@ h2.mob-p {
     background-color: #FBD2C8;
     padding-left: 8px;
     padding-right: 10px;
+    overflow: hidden;
   }
   #desk-header {
     margin-top: 30px;
