--- a/style.css
+++ b/style.css
@@ -76,8 +76,7 @@ button.hamburger-button {
   font-weight:bold;
   font-size: 20px;
   width: 50%;
-  background: #FBD2C8;
-  opacity: 0.8;
+  background: rgba(251,210,200,0.8);
   font-family: Didot bold;
   display: block;
   text-align: center;
