--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ img.body-background {
   top: 0;
   margin: 0 auto;
   position: fixed;
-  height: 100px;
+  height: 15vw;
   width: 100%;
   background: #FBD2C8;
   z-index: 999;
@@ -58,23 +58,27 @@ img.body-background {
 }
 button.hamburger-button {
   background: none;
-  margin-top: 20px;
-  margin-right: 20px;
-  line-height: 45px;
+  margin-top: 2vw;
+  margin-right: 3vw;
+  margin-left: auto;
+  margin-bottom: auto;
   color: black;
   border: 0;
-  font-size: 1.4em;
+  font-size: 6vw;
   font-weight: bold;
   cursor: pointer;
   outline: none;
   z-index: 999999;
   float: right;
 }
+.menu-icon {
+  display: block;
+}
 .hamburger-menu-list {
   z-index: 999999 !important;
-  margin-top: 100px;
+  margin-top: 15vw;
   font-weight:bold;
-  font-size: 20px;
+  font-size: 3vw;
   width: 50%;
   background: rgba(251,210,200,0.8);
   font-family: Didot bold;
@@ -91,7 +95,7 @@ button.hamburger-button {
 }
 .hamburger-menu-list li {
   display: block;
-  border-bottom:#FBD2C8 1px solid;
+  /*border-bottom:#FBD2C8 1px solid;*/
   color: black;;
   padding: 10px;
   z-index: 99999;
@@ -125,10 +129,10 @@ button.hamburger-button {
 }
 
 #sharon-logo {
-  height: auto;
+  height: 11vw;
   max-width: 75%;
-  margin-top: 20px;
-  margin-left: 20px;
+  margin-top: 2vw;
+  margin-left: 7vw;
   margin-right: auto;
   margin-bottom: auto;
   float: left;
@@ -281,8 +285,8 @@ button.hamburger-button {
 #about-cont {
   display: none;
   font-family: Didot bold;
-  margin-top: 150px;
-  margin-bottom: 40px;
+  margin-top: 30vw;
+  margin-bottom: 10vw;
   margin-right: auto;
   margin-left: auto;
   right: 0;
@@ -300,8 +304,8 @@ button.hamburger-button {
 #work-cont {
   display: none;
   font-family: Didot bold;
-  margin-top: 150px;
-  margin-bottom: 40px;
+  margin-top: 30vw;
+  margin-bottom: 10vw;
   margin-right: auto;
   margin-left: auto;
   right: 0;
@@ -319,8 +323,8 @@ button.hamburger-button {
 #contact-cont {
   display: none;
   font-family: Didot bold;
-  margin-top: 150px;
-  margin-bottom: 40px;
+  margin-top: 30vw;
+  margin-bottom: 10vw;
   margin-right: auto;
   margin-left: auto;
   right: 0;
@@ -369,7 +373,7 @@ h2.mob-p {
   padding-right: 5px;
 }
 
-@media only screen and (min-width:500px) {
+@media only screen and (min-width:1200px) {
   .menu {
     left: 0;
     top: 0;
@@ -420,7 +424,7 @@ h2.mob-p {
     margin-bottom: 10px;
   }
 }
-@media only screen and (min-width: 500px) {
+@media only screen and (min-width: 1200px) {
   .img-logo {
     height: auto;
     width: 80%;
@@ -428,7 +432,7 @@ h2.mob-p {
     margin: 40px auto;
   }
 }
-@media only screen and (min-width: 500px) {
+@media only screen and (min-width: 1200px) {
   #about-cont {
     display: none;
     font-family: Didot bold;
@@ -510,7 +514,7 @@ h2.mob-p {
     padding-right: 10px;
   }
 }
-@media only screen and (min-width: 500px) {
+@media only screen and (min-width: 1200px) {
   img#background-image {
     height: 100%;
     width: 100%;
