--- a/styles/layout.css
+++ b/styles/layout.css
@@ -42,6 +42,10 @@
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
+
+.panel-content img {
+  text-align: center;
+}
 #first-icon {
   height: 65px;
   width: auto;
